<resources>
    <string name="app_name">KristalasIoT</string>
    <string name="delay_btn">Set</string>
    <string name="bcm4_on">BCM4 is On</string>
    <string name="bcm4_off">BCM4 is Off</string>
    <string name="bcm6_on">BCM6 is On</string>
    <string name="bcm6_off">BCM6 is Off</string>
    <string name="rpi_online">Raspberry Pi is Online</string>
    <string name="rpi_offline">Raspberry Pi is Offline</string>

    <string name="overview">Overview</string>
    <string name="delay_label">Delay:</string>
    <string name="malf_label">Malfunction Offset:</string>
    <string name="malf_info">Warning! Watering system malfunction detected!</string>
    <string name="BCM4_label">BCM4:</string>
    <string name="BCM6_label">BCM6:</string>
    <string name="BCM17_label">BCM17:</string>
    <string name="BCM22_label">BCM22:</string>
    <string name="BCM23_label">BCM23:</string>
    <string name="BCM24_label">BCM24:</string>
    <string name="BCM25_label">BCM25:</string>
    <string name="BCM27_label">BCM27:</string>

    <string name="garden">Garden system</string>
    <string name="gardentitle">Manual settings</string>
    <string name="ws1">Water switch 1</string>
    <string name="ws2">Water switch 2</string>
    <string name="wp">Water pump</string>
    <string name="h1">Input from humidity sensor 1:</string>
    <string name="h2">Input from humidity sensor 2:</string>
    <string name="h3">Input from humidity sensor 3:</string>
    <string name="wet">Wet</string>
    <string name="dry">Dry</string>
    <string name="auto_on">Auto mode</string>
    <string name="auto_off">Manual mode</string>
    <string name="plant1a">Plant 1 has enough Moisture</string>
    <string name="plant1b">Watering plant 1</string>
    <string name="plant1c">Need to water the plant 1</string>
    <string name="plant1d">Plant 1 desired humidity</string>

    <string name="plant2a">Plant 2 has enough Moisture</string>
    <string name="plant2b">Watering plant 2</string>
    <string name="plant2c">Need to water the plant 3</string>
    <string name="plant2d">Plant 2 desired humidity</string>

    <string name="plant3a">Plant 3 has enough Moisture</string>
    <string name="plant3b">Watering plant 3</string>
    <string name="plant3c">Need to water the plant 3</string>
    <string name="plant3d">Plant 3 desired humidity</string>


</resources>
